# udplite

./: .cirrus.yml  .gitignore  Cargo.toml  LICENSE-MIT  README.md  udplite.rs
examples/: hello_udplite.rs
tests/: basics.rs  extras.rs  std_udp_similarity.rs
