[package]
name = "udplite"
version = "0.1.0"
description = "An idiomatic UDP-Lite wrapper, with optional mio integration"
readme = "README.md"
repository = "https://github.com/tormol/udplite"
license = "Apache-2.0 / MIT"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
categories = ["network-programming", "asynchronous", "os::unix-apis"]
edition = "2018"

[dependencies]
# for UDPLITE_SEND_CSCOV and UDPLITE_RECV_CSCOV, and Android IPPROTO_UDPLITE
libc = {git="https://github.com/tormol/rust-libc", branch="udplite_cscov"}
# 0.6.13 drags in libc 0.1 when built with -Z minimal-versions
mio_06 = {package="mio", version="0.6.14", optional=true}
mio_07 = {package="mio", version="0.7.0", optional=true, features=["os-util"]}

[lib]
path = "udplite.rs"

[package.metadata.docs.rs]
features = ["mio_06", "mio_07"]
